Configure and apply Java formatting
Co-authored-by: Codex GPT-5 <codex@openai.com>